# universal-conrtoller-firmware

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  main.c
main/core/: adc.c  btn.c  core.h  ds18b20.c  gpio.c  handler.c  mqtt.c  publisher.c  publisher.h  wifi.c
main/utils/: parser.c  parser.h
