idf_component_register(SRCS "main.c"
                       SRCS "core/wifi.c"
                       SRCS "core/gpio.c"
                       SRCS "core/handler.c"
                       SRCS "core/mqtt.c"
                       SRCS "core/publisher.c"
                       SRCS "core/adc.c"
                       SRCS "core/btn.c"
                       SRCS "utils/parser.c"
                       INCLUDE_DIRS ".")